force-app/main/default/objects/Contract_Template__c/Contract_Template__c.object-meta.xml
<CustomObject>
    <label>Contract Template</label>
    <pluralLabel>Contract Templates</pluralLabel>
    <nameField>
        <label>Contract Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>