force-app/main/default/objects/Contract_Template__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Contract Templates</relationshipLabel>
    <relationshipName>Business_Unit_Contract_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>