force-app/main/default/objects/Contract_Template__c/fields/Created_From_Drive__c.field-meta.xml
<CustomField>
  <fullName>Created_From_Drive__c</fullName>
  <label>Created From Drive</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>