force-app/main/default/objects/Contract_Template__c/fields/Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Template_Category__c</fullName>
    <label>Template Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>Employment Contract</fullName>
            </value>
            <value>
                <fullName>Independent Contractor Agreement</fullName>
            </value>
            <value>
                <fullName>Non-Disclosure Agreement (NDA)</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Purchase Agreement</fullName>
            </value>
            <value>
                <fullName>Master Service Agreement (MSA)</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement</fullName>
            </value>
            <value>
                <fullName>Joint Venture Agreement</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Sublease Agreement</fullName>
            </value>
            <value>
                <fullName>Subcontractor Agreement</fullName>
            </value>
            <value>
                <fullName>Construction Contract</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Statement of Work (SOW)</fullName>
            </value>
            <value>
                <fullName>Consulting Agreement</fullName>
            </value>
            <value>
                <fullName>Licensing Agreement</fullName>
            </value>
            <value>
                <fullName>Confidentiality Agreement</fullName>
            </value>
            <value>
                <fullName>Maintenance Agreement</fullName>
            </value>
            <value>
                <fullName>Vendor Agreement</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Quote/Estimate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>The type/category of contract that this template represents</description>
    <inlineHelpText>Select the contract type this template is designed for. This helps users quickly find the right template for their needs.</inlineHelpText>
</CustomField>